# WarhornPlanner

./: CMakeLists.txt  add_ticket_example.json
src/: coffey.cpp  coffey.h  main.cpp
src/config/: config.h
src/management/: coffeybase.cpp  coffeybase.h  coffeyuser.cpp  coffeyuser.h
src/managers/: accountmanager.cpp  accountmanager.h  boardmanager.cpp  boardmanager.h  configmanager.cpp  configmanager.h  networkmanager.cpp  networkmanager.h  objectmanager.cpp  objectmanager.h  popupmanager.cpp  popupmanager.h  ticketmanager.cpp  ticketmanager.h
src/popup/: error.cpp  error.h  notify.cpp  notify.h  popup.cpp  popup.h  warning.cpp  warning.h
src/qml/: main.qml  qml.qrc
src/qml/config/: Colors.js  Constants.js
src/qml/views/: Account.qml  AppView.qml  Backlog.qml  Board.qml  CreateTicket.qml  Login.qml  Settings.qml  Ticket.qml
src/qml/views/custom/: Button_C.qml  ColorSelection_C.qml  ComboBox_C.qml  DropDown.qml  EditableLabel.qml  EnumList.qml  IntegerInput_C.qml  ScrollBar_C.qml  Slider_C.qml  TextArea_C.qml  TextInput_C.qml
src/qml/views/elements/: AppPanel.qml  ChangePassword.qml  Highlighter.qml  ImageEntity.qml  ImageList.qml  MenuPanel.qml  PriorityImage.qml  TextSeparator.qml  Ticket.qml  TicketCol.qml  TicketDetails.qml  TicketHighlighter.qml  TicketLink.qml  TicketLinks.qml  UserImage.qml
src/qml/views/elements/popup/: ErrorStack.qml  NotifyStack.qml  PopupEntity.qml
src/ticket/: ticket.cpp  ticket.h  ticketbase.cpp  ticketbase.h  ticketinfo.cpp  ticketinfo.h
src/user/: user.cpp  user.h
